new proj/src/objects/GE_MDM_Account_Field_Mapping__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <customSettingsVisibility>Public</customSettingsVisibility>
    <description>Maps the MDM customer search values to fields on the standard Account object.</description>
    <fields>
        <fullName>Account_Name__c</fullName>
        <inlineHelpText>Enter the API name of the field related to Account Name.</inlineHelpText>
        <label>Account Name</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>City__c</fullName>
        <description>Enter the API name of the field related to the City.</description>
        <inlineHelpText>Enter the API name of the field related to the City.</inlineHelpText>
        <label>City</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Country_Code__c</fullName>
        <description>Enter the API name of the field related to the Country Code.</description>
        <inlineHelpText>Enter the API name of the field related to the Country Code.</inlineHelpText>
        <label>Country Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DUNS_Domestic_Ultimate__c</fullName>
        <inlineHelpText>Enter the API name of the field related to DUNS Domestic Ultimate.</inlineHelpText>
        <label>DUNS Domestic Ultimate</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DUNS_Global_Ultimate_Name__c</fullName>
        <inlineHelpText>Enter the API Name of the field related to the DUNS Global Ultimate Name.</inlineHelpText>
        <label>DUNS Global Ultimate Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DUNS_Global_Ultimate__c</fullName>
        <inlineHelpText>Enter the API name of the field related to DUNS Global Ultimate.</inlineHelpText>
        <label>DUNS Global Ultimate</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DUNS_Number__c</fullName>
        <inlineHelpText>Enter the API name of the field related to DUNS Number.</inlineHelpText>
        <label>DUNS Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DUNS_Parent__c</fullName>
        <inlineHelpText>Enter the API name of the field related to DUNS Parent.</inlineHelpText>
        <label>DUNS Parent</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DUNS_Previous__c</fullName>
        <inlineHelpText>Enter the API name of the field related to DUNS Previous.</inlineHelpText>
        <label>DUNS Previous</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Gold_ID__c</fullName>
        <inlineHelpText>Enter the API name of the field related to Gold ID.</inlineHelpText>
        <label>Gold ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Phone__c</fullName>
        <description>Enter the API name of the field related to the Phone Number.</description>
        <inlineHelpText>Enter the API name of the field related to the Phone Number.</inlineHelpText>
        <label>Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Proposed_DUNS__c</fullName>
        <label>Proposed DUNS</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Requested_D_B_DUNS_Bill_To__c</fullName>
        <label>Requested D&amp;B DUNS # (Bill To)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Requested_D_B_DUNS_New_Request__c</fullName>
        <label>Requested D&amp;B DUNS # (New Request)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Requested_D_B_DUNS_Quote_To_Sold_To__c</fullName>
        <label>Requested D&amp;B DUNS # (Quote To/Sold To)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Requested_D_B_DUNS_Ship_To__c</fullName>
        <label>Requested D&amp;B DUNS # (Ship To)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SIC_Code__c</fullName>
        <inlineHelpText>Enter the API name of the field related to SIC Code.</inlineHelpText>
        <label>SIC Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Site_Use_Code__c</fullName>
        <inlineHelpText>Enter the API name of the field related to Site Use Code.</inlineHelpText>
        <label>Site Use Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>State_Province__c</fullName>
        <description>Enter the API name of the field related to the State/Province.</description>
        <inlineHelpText>Enter the API name of the field related to the State/Province.</inlineHelpText>
        <label>State/Province</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status_Value__c</fullName>
        <inlineHelpText>Enter value of Account&apos;s STATUS field that should be set when an MDM customer is created in Salesforce</inlineHelpText>
        <label>Status Value</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <inlineHelpText>Enter the API name of the Status field</inlineHelpText>
        <label>Status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Street_Address__c</fullName>
        <description>Enter the API name of the field related to the Street Address.</description>
        <inlineHelpText>Enter the API name of the field related to the Street Address.</inlineHelpText>
        <label>Street Address</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Trade_Style_Name__c</fullName>
        <inlineHelpText>Enter the API name of the field related to Trade Style Name.</inlineHelpText>
        <label>Trade Style Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>VAT_Number__c</fullName>
        <inlineHelpText>Enter the API name of the field related to VAT Number.</inlineHelpText>
        <label>VAT Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Zip_Code__c</fullName>
        <description>Enter the API name of the field related to the Zip Code.</description>
        <inlineHelpText>Enter the API name of the field related to the Zip Code.</inlineHelpText>
        <label>Zip Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>GE MDM - Account Field Mapping</label>
</CustomObject>